cross device basic functionality working.

--- a/sidebar.html
+++ b/sidebar.html
@@ -14,6 +14,7 @@
         <div id="peersync-session-display-container">
             <p id="peersync-session-id-display"></p>
             <button id="peersync-copy-btn" style="display: none;">Copy</button>
+            <button id="peersync-test-connection-btn" style="display: none;">Test Connection</button>
         </div>
     </div>
 
